--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Gambo - Login</title>
   <link rel="icon" type="image/jpg" href="images/logo.png">
   <link rel="stylesheet" href="gambo.css">
+  <meta name="google-site-verification" content="L2l1oZCdix5ernNGhxijKGVEFMMbKTZNTlCU4l52Alg" />
   <script src="gambo.js"></script>
 
   <style>
